# zazu-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: fetch-cassettes.sh
src/: client.rs  error.rs  lib.rs  page.rs
src/resources/: accounts.rs  beneficiaries.rs  checkout_sessions.rs  customers.rs  entity.rs  invoices.rs  mod.rs  payment_links.rs  transfer_drafts.rs  webhook_endpoints.rs
tests/: client.rs  resources.rs
tests/common/: mod.rs
