[package]
name = "zazu-sdk"
version = "0.2.1"
edition = "2021"
license = "MIT"
description = "Rust SDK for the Zazu API"
repository = "https://github.com/getzazu/zazu-rust"

[lib]
name = "zazu_sdk"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
base64 = "0.22"
serde_yaml = "0.9"
tiny_http = "0.12"
